more layout stuff

--- a/about.html
+++ b/about.html
@@ -52,43 +52,31 @@
     </nav>
 
     <div class="container-fluid">
-      <!-- Elevator pitch -->
       <div class="row">
         <div class="col">
-          <h1>Congratulations! ...</h1>
-          <p>Elevator pitch</p>
+          <h1>About me</h1>
+          <p>Text</p>
+          <!-- Hover to different image -->
+          <img src="https://placeholder.com/150" />
         </div>
       </div>
-      <!-- Services -->
-      <div class="row">
-        <div class="col-md-3">
-          <h1>Service 1</h1>
-          <p>description</p>
-        </div>
-        <div class="col-md-3">
-          <h1>Service 2</h1>
-          <p>description</p>
-        </div>
-        <div class="col-md-3">
-          <h1>Service 3</h1>
-          <p>description</p>
-        </div>
-        <div class="col-md-3">
-          <h1>Service 4</h1>
-          <p>description</p>
-        </div>
-      </div>
-      <!-- About -->
       <div class="row">
         <div class="col">
-          <h1>About ...</h1>
+          <h1>Mission</h1>
           <p>Text</p>
         </div>
       </div>
-      <!-- Call to Action -->
-      <button>
-        <!-- Contact me page -->
-      </button>
+      <div class="row">
+        <div class="col">
+          <h1>About me</h1>
+          <p>Text</p>
+          <!-- Hover to different image -->
+          <img src="https://placeholder.com/150" />
+        </div>
+      </div>
+
+      <!-- button -->
+
       <!-- Footer -->
     </div>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
