--- a/services.html
+++ b/services.html
@@ -52,43 +52,41 @@
     </nav>
 
     <div class="container-fluid">
-      <!-- Elevator pitch -->
+      <!-- Thick line for each -->
       <div class="row">
         <div class="col">
           <h1>Congratulations! ...</h1>
           <p>Elevator pitch</p>
         </div>
       </div>
-      <!-- Services -->
-      <div class="row">
-        <div class="col-md-3">
-          <h1>Service 1</h1>
-          <p>description</p>
-        </div>
-        <div class="col-md-3">
-          <h1>Service 2</h1>
-          <p>description</p>
-        </div>
-        <div class="col-md-3">
-          <h1>Service 3</h1>
-          <p>description</p>
-        </div>
-        <div class="col-md-3">
-          <h1>Service 4</h1>
-          <p>description</p>
-        </div>
-      </div>
-      <!-- About -->
       <div class="row">
         <div class="col">
-          <h1>About ...</h1>
+          <h1>Congratulations! ...</h1>
+          <p>Elevator pitch</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h1>Congratulations! ...</h1>
+          <p>Elevator pitch</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <h1>Congratulations! ...</h1>
+          <p>Elevator pitch</p>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <h1>Our competitive edge</h1>
           <p>Text</p>
         </div>
       </div>
-      <!-- Call to Action -->
-      <button>
-        <!-- Contact me page -->
-      </button>
+
+      <!-- button -->
+
       <!-- Footer -->
     </div>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
