--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="#">Logo</a>
+      <a class="navbar-brand" href="#">
+        <img src="images/logo.jpg" style="width: 100px;" />
+      </a>
       <button
         class="navbar-toggler"
         type="button"
