--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
       <div class="row">
         <div class="col">
           <h1>Congratulations! ...</h1>
-          <p>Elevator pitch</p>
+          <p>Acceptitas is a holistic college essay editing and coaching service, whose goal is to create the strongest narrative in an application. This is done by working with students to strengthen their application essays so that it fits a larger narrative, which is the most compelling version of themselves. Acceptitas is primary for students that are in the beginning, middle, or very end of the essay writing and application process. 
+
+What we offer is a holistic approach to presenting the most competitive version of a student at a fraction of the cost, with the lived experience of Harvard students. At Acceptitas, we offer access to those who know elite school’s current admissions process personally -- Harvard students. Our narrative crafting skills, firsthand understanding of the holistic process, and competitive price are our biggest assets.
+</p>
         </div>
       </div>
       <!-- Services -->
