--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,10 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="#">Logo</a>
+    <nav class="navbar navbar-expand-sm navbar-dark">
+      <a class="navbar-brand" href="#">
+        <img src="images/logo.jpg" style="width: 100px;" />
+      </a>
       <button
         class="navbar-toggler"
         type="button"
@@ -45,7 +47,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -54,28 +56,12 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col">
-          <h1>About me</h1>
-          <p>Text</p>
-          <!-- Hover to different image -->
-          <img src="https://placeholder.com/150" />
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <h1>Mission</h1>
-          <p>Text</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <h1>About me</h1>
-          <p>Text</p>
+          <p>email</p>
+          <p>address</p>
           <!-- Hover to different image -->
           <img src="https://placeholder.com/150" />
         </div>
       </div>
     </div>
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="js/main.js"></script>
   </body>
 </html>
