--- a/index.html
+++ b/index.html
@@ -107,13 +107,12 @@
         </div>
       </div>
       <!-- Call to Action -->
-      <button>
-        <!-- Contact me page -->
+      <button type="button" class="btn btn-dark">
+        <a href="contact.html">Contact page</a>
       </button>
       <!-- Footer -->
     </div>
 
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="scripts/fade.js"></script>
   </body>
 </html>
