--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm navbar-dark">
       <a class="navbar-brand" href="#">
         <img src="images/logo.jpg" style="width: 100px;" />
       </a>
@@ -47,7 +47,7 @@
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -91,7 +91,5 @@
 
       <!-- Footer -->
     </div>
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="js/main.js"></script>
   </body>
 </html>
