--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container-fluid"">
       <!-- Elevator pitch -->
       <div class="row" style="height: 10vh;">
         <div class="col">
@@ -80,6 +80,7 @@
           </p>
         </div>
       </div>
+
       <!-- Services -->
       <div class="row">
         <div class="col-md-3">
@@ -99,6 +100,7 @@
           <p>description</p>
         </div>
       </div>
+
       <!-- About -->
       <div class="row">
         <div class="col">
@@ -106,11 +108,23 @@
           <p>Text</p>
         </div>
       </div>
+
       <!-- Call to Action -->
-      <button type="button" class="btn btn-dark">
-        <a href="contact.html">Contact page</a>
-      </button>
-      <!-- Footer -->
+      <div class="row">
+        <div class="col">
+          <button type="button" class="btn btn-dark">
+            <a href="contact.html">Contact page</a>
+          </button>
+        </div>
+      </div>
+    </div>
+    <!-- Footer -->
+    <div class="row">
+      <div class="col">
+        <footer class="footer">
+          Sample footer
+        </footer>
+      </div>
     </div>
 
     <script src="scripts/fade.js"></script>
