footer and button improvements

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="images/logo.jpg" style="width: 100px;" />
       </a>
       <button
@@ -111,21 +111,20 @@
 
       <!-- Call to Action -->
       <div class="row">
-        <div class="col">
-          <button type="button" class="btn btn-dark">
+        <div class="col d-flex justify-content-center">
+          <button type="button" class="align-self-center">
             <a href="contact.html">Contact page</a>
           </button>
         </div>
       </div>
     </div>
+
     <!-- Footer -->
-    <div class="row">
-      <div class="col">
-        <footer class="footer">
-          Sample footer
-        </footer>
+    <footer id="sticky-footer" class="py-4 text-white-50">
+      <div class="container text-center">
+        <small>Copyright &copy; Your Website</small>
       </div>
-    </div>
+    </footer>
 
     <script src="scripts/fade.js"></script>
   </body>
