--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="images/logo.jpg" style="width: 100px;" />
       </a>
       <button
@@ -52,16 +52,11 @@
         </ul>
       </div>
     </nav>
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col">
-          <p>email</p>
-          <p>address</p>
-          <!-- Hover to different image -->
-          <img src="https://placeholder.com/150" />
-        </div>
+    <!-- Footer -->
+    <footer id="sticky-footer" class="py-4 text-white-50">
+      <div class="container text-center">
+        <small>Copyright &copy; Your Website</small>
       </div>
-    </div>
+    </footer>
   </body>
 </html>
