--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="images/logo.jpg" style="width: 100px;" />
       </a>
       <button
@@ -87,9 +87,20 @@
         </div>
       </div>
 
-      <!-- button -->
-
-      <!-- Footer -->
+      <!-- Call to Action -->
+      <div class="row">
+        <div class="col d-flex justify-content-center">
+          <button type="button" class="align-self-center">
+            <a href="contact.html">Contact page</a>
+          </button>
+        </div>
+      </div>
     </div>
+    <!-- Footer -->
+    <footer id="sticky-footer" class="py-4 text-white-50">
+      <div class="container text-center">
+        <small>Copyright &copy; Your Website</small>
+      </div>
+    </footer>
   </body>
 </html>
