--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
+    <link rel="icon" 
+      type="image/png" 
+      href="images/icon_logo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -19,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-sm navbar-dark">
       <a class="navbar-brand" href="index.html">
-        <img src="images/logo.jpg" style="width: 100px;" />
+        <img src="images/clear_logo.png" style="width: 150px;" />
       </a>
       <button
         class="navbar-toggler"
