--- a/index.html
+++ b/index.html
@@ -60,26 +60,14 @@
       <div class="row" style="height: 10vh;">
         <div class="col">
           <h1>
-            Congratulations!
+            Build Your Narrative.
           </h1>
         </div>
       </div>
       <div class="row" style="height: 90vh;">
         <div class="col-md-8 offset-md-2 d-flex align-content-center flex-wrap">
           <p id="elevatorPitch">
-            Acceptitas is a holistic college essay editing and coaching service,
-            whose goal is to create the strongest narrative in an application.
-            This is done by working with students to strengthen their
-            application essays so that it fits a larger narrative, which is the
-            most compelling version of themselves. Acceptitas is primary for
-            students that are in the beginning, middle, or very end of the essay
-            writing and application process. What we offer is a holistic
-            approach to presenting the most competitive version of a student at
-            a fraction of the cost, with the lived experience of Harvard
-            students. At Acceptitas, we offer access to those who know elite
-            school’s current admissions process personally -- Harvard students.
-            Our narrative crafting skills, firsthand understanding of the
-            holistic process, and competitive price are our biggest assets.
+            When everyone has the grades, test scores, and activities, how do exceptional students stand out? The overall narrative--the picture the admissions offer has of a student’s character, strengths, and lived experience. Acceptitas is a holistic college application editing service that brings out students' unique and compelling story across all their application materials. Founded by a current Harvard student, we offer our first hand experience in the college admissions process and strong narrative crafting skills at a fraction of the cost. We help students build their unique narrative, so that they can submit with confidence.
           </p>
         </div>
       </div>
@@ -87,28 +75,28 @@
       <!-- Services -->
       <div class="row">
         <div class="col-md-3">
-          <h1>Service 1</h1>
-          <p>description</p>
+          <h1>“Find Your Narrative” Strategy Consultations</h1>
+          <p>We use our first-hand experience to help you identify and craft your most compelling narrative through our strategy consultations. We will get to know you, examine your life experiences, interests, and aspirations to craft your unique application narrative. After our meeting, you will receive an assessment of your current narrative, its strengths, areas for growth, and an action plan for refining your story across your application materials.</p>
         </div>
         <div class="col-md-3">
-          <h1>Service 2</h1>
-          <p>description</p>
+          <h1>Narrative Assessment</h1>
+          <p>We review your current application packet materials, provide constructive feedback, and help you identify and amplify your strongest narratives. Part of this process is our signature mock admissions read which we use as a diagnostic test of your narrative’s strength.</p>
         </div>
         <div class="col-md-3">
           <h1>Service 3</h1>
           <p>description</p>
         </div>
         <div class="col-md-3">
-          <h1>Service 4</h1>
-          <p>description</p>
+          <h1>Mock Interviews</h1>
+          <p>Learn how to lean into your strengths and naturally support your overall application narrative through our mock interviews, conducted by someone who has successful first-hand experience. Each mock interview comes with an after-action report that identifies actionable areas of growth for the big day.</p>
         </div>
       </div>
 
       <!-- About -->
       <div class="row">
         <div class="col">
-          <h1>About ...</h1>
-          <p>Text</p>
+          <h1>About Acceptitas</h1>
+          <p>Our unique approach to college admissions and focus on bringing out the most compelling narrative from each student, was used successfully by founder Emmet Halm in his admissions process to Harvard and other peer institutions. Without access to expensive private college consultants, Emmet created his own strategic approach to college applications that emphasizes leaning into your personality and life experiences to create a narrative that is “unapologetically yourself.” At Acceptitas, we believe in unlocking the power within each student by helping them phrame their life experiences and strengths into a unique and compelling application narrative. To better get to know Emmet and our company, click here.</p>
         </div>
       </div>
 
