--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
           <p>We review your current application packet materials, provide constructive feedback, and help you identify and amplify your strongest narratives. Part of this process is our signature mock admissions read which we use as a diagnostic test of your narrative’s strength.</p>
         </div>
         <div class="col-md-3">
-          <h1>Service 3</h1>
-          <p>description</p>
-        </div>
-        <div class="col-md-3">
           <h1>Mock Interviews</h1>
           <p>Learn how to lean into your strengths and naturally support your overall application narrative through our mock interviews, conducted by someone who has successful first-hand experience. Each mock interview comes with an after-action report that identifies actionable areas of growth for the big day.</p>
+        </div>
+        <div class="col-md-3">
+          <h1>Last Minute Essay and Narrative Editing</h1>
+          <p>We provide last-minute essay and overall narrative feedback for driven students wanting to present the most compelling version of themself, and click the submit button with confidence.</p>
         </div>
       </div>
 
