--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <!-- Services -->
       <div class="row">
         <div class="col-md-3">
-          <h1>“Find Your Narrative” Strategy Consultations</h1>
+          <h1>Strategy Consultations</h1>
           <p>We use our first-hand experience to help you identify and craft your most compelling narrative through our strategy consultations. We will get to know you, examine your life experiences, interests, and aspirations to craft your unique application narrative. After our meeting, you will receive an assessment of your current narrative, its strengths, areas for growth, and an action plan for refining your story across your application materials.</p>
         </div>
         <div class="col-md-3">
@@ -87,7 +87,7 @@
           <p>Learn how to lean into your strengths and naturally support your overall application narrative through our mock interviews, conducted by someone who has successful first-hand experience. Each mock interview comes with an after-action report that identifies actionable areas of growth for the big day.</p>
         </div>
         <div class="col-md-3">
-          <h1>Last Minute Essay and Narrative Editing</h1>
+          <h1>Last Minute Editing</h1>
           <p>We provide last-minute essay and overall narrative feedback for driven students wanting to present the most compelling version of themself, and click the submit button with confidence.</p>
         </div>
       </div>
