--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="row">
         <div class="col">
           <h1>About Acceptitas</h1>
-          <p>Our unique approach to college admissions and focus on bringing out the most compelling narrative from each student, was used successfully by founder Emmet Halm in his admissions process to Harvard and other peer institutions. Without access to expensive private college consultants, Emmet created his own strategic approach to college applications that emphasizes leaning into your personality and life experiences to create a narrative that is “unapologetically yourself.” At Acceptitas, we believe in unlocking the power within each student by helping them phrame their life experiences and strengths into a unique and compelling application narrative. To better get to know Emmet and our company, click here.</p>
+          <p>Our unique approach to college admissions and focus on bringing out the most compelling narrative from each student, was used successfully by founder Emmet Halm in his admissions process to Harvard and other peer institutions. Without access to expensive private college consultants, Emmet created his own strategic approach to college applications that emphasizes leaning into your personality and life experiences to create a narrative that is “unapologetically yourself.” At Acceptitas, we believe in unlocking the power within each student by helping them frame their life experiences and strengths into a unique and compelling application narrative. To better get to know Emmet and our company, click here.</p>
         </div>
       </div>
 
