service and about formatting on homepage

--- a/index.html
+++ b/index.html
@@ -83,28 +83,42 @@
 
       <!-- Services -->
       <div class="row" >
-        <div class="col-md-3">
-          <h1>Strategy Consultations</h1>
-          <p>We use our first-hand experience to help you identify and craft your most compelling narrative through our strategy consultations. We will get to know you, examine your life experiences, interests, and aspirations to craft your unique application narrative. After our meeting, you will receive an assessment of your current narrative, its strengths, areas for growth, and an action plan for refining your story across your application materials.</p>
-        </div>
-        <div class="col-md-3">
-          <h1>Narrative Assessment</h1>
-          <p>We review your current application packet materials, provide constructive feedback, and help you identify and amplify your strongest narratives. Part of this process is our signature mock admissions read which we use as a diagnostic test of your narrative’s strength.</p>
-        </div>
-        <div class="col-md-3">
-          <h1>Mock Interviews</h1>
-          <p>Learn how to lean into your strengths and naturally support your overall application narrative through our mock interviews, conducted by someone who has successful first-hand experience. Each mock interview comes with an after-action report that identifies actionable areas of growth for the big day.</p>
-        </div>
-        <div class="col-md-3">
-          <h1>Last Minute Editing</h1>
-          <p>We provide last-minute essay and overall narrative feedback for driven students wanting to present the most compelling version of themself, and click the submit button with confidence.</p>
+        <div class="col my-auto text-center">
+          <h1>Our Services</h1>
+          <br>
         </div>
       </div>
-
-      <!-- About -->
+      <div class="row" >
+        <div class="col-md-4 offset-md-2">
+          <h3>Strategy Consultations</h3>
+          <p>We use our first-hand experience to help you identify and craft your most compelling narrative through our strategy consultations. We will get to know you, examine your life experiences, interests, and aspirations to craft your unique application narrative. After our meeting, you will receive an assessment of your current narrative, its strengths, areas for growth, and an action plan for refining your story across your application materials.</p>
+        </div>
+        <div class="col-md-4">
+          <h3>Narrative Assessment</h3>
+          <p>We review your current application packet materials, provide constructive feedback, and help you identify and amplify your strongest narratives. Part of this process is our signature mock admissions read which we use as a diagnostic test of your narrative’s strength.</p>
+        </div>
+      </div>
+      
       <div class="row">
-        <div class="col">
+        <div class="col-md-4 offset-md-2">
+          <h3>Mock Interviews</h3>
+          <p>Learn how to lean into your strengths and naturally support your overall application narrative through our mock interviews, conducted by someone who has successful first-hand experience. Each mock interview comes with an after-action report that identifies actionable areas of growth for the big day.</p>
+        </div>
+        <div class="col-md-4">
+          <h3>Last Minute Editing</h3>
+          <p>We provide last-minute essay and overall narrative feedback for driven students wanting to present the most compelling version of themself, and click the submit button with confidence.</p>
+        </div>
+
+      </div>
+      <!-- About -->
+      <div class="row" >
+        <div class="col my-auto text-center">
           <h1>About Acceptitas</h1>
+          <br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-8 offset-md-2">
           <p>Our unique approach to college admissions and focus on bringing out the most compelling narrative from each student, was used successfully by founder Emmet Halm in his admissions process to Harvard and other peer institutions. Without access to expensive private college consultants, Emmet created his own strategic approach to college applications that emphasizes leaning into your personality and life experiences to create a narrative that is “unapologetically yourself.” At Acceptitas, we believe in unlocking the power within each student by helping them frame their life experiences and strengths into a unique and compelling application narrative. To better get to know Emmet and our company, click here.</p>
         </div>
       </div>
