--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="row" style="height: 100vh;">
         <div class="col-md-8 offset-md-2 d-flex align-content-center flex-wrap" id="pitch">
           <p id="elevatorPitch" style="opacity: 0;">
-            When everyone has the grades, test scores, and activities, how do exceptional students stand out? The overall narrative--the picture the admissions offer has of a student’s character, strengths, and lived experience. Acceptitas is a holistic college application editing service that brings out students' unique and compelling story across all their application materials. Founded by a current Harvard student, we offer our first hand experience in the college admissions process and strong narrative crafting skills at a fraction of the cost. We help students build their unique narrative, so that they can submit with confidence.
+          Acceptitas is a holistic college application consulting service that empowers students to identify and amplify their unique and compelling story across all their application materials. Founded by a current Harvard student, we offer our first hand experience in the college admissions process and strong narrative crafting skills at a fraction of the cost. We help students build their unique narrative, so that they can submit with confidence.
           </p>
         </div>
       </div>
