--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
           <br>
           <br>
           <h3>Strategy Consultations</h3>
-          <p>We use our first-hand experience to help you identify and craft your most compelling narrative through our strategy consultations. We will get to know you, examine your life experiences, interests, and aspirations to craft your unique application narrative. After our meeting, you will receive an assessment of your current narrative, its strengths, areas for growth, and an action plan for refining your story across your application materials.</p>
+          <p>Together we will examine your life experiences, interests, and aspirations to start crafting your unique application narrative. After our meeting, you will receive an assessment of your current narrative, its strengths, areas for growth, and an action plan for refining your story across your application materials.
+</p>
         </div>
         <div class="col-md-4">
           <img src="images/services/narrative.jpg" alt="narrative">
