--- a/about.html
+++ b/about.html
@@ -57,8 +57,9 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col">
-          <h1>About me</h1>
-          <p>Text</p>
+          <h1>Hi I'm Emmet...</h1>
+          <p>… is what Emmet would say if this was written in the first person. Emmet is an undergraduate at Harvard who has a passion for helping others succeed, experience teaching, and first-hand experience in the college admissions process. When Emmet was applying to college, he knew that he had to differentiate himself from the competition by highlighting his personal story. He struggled with dyslexia in school and was cautioned that college might not be for him and that writing and language learning would be too difficult. Ironically, writing and learning languages became Emmet’s biggest interests and areas of success in high school. When it came time to apply to college, at first Emmet spent lots of time on cliche essays, fruitless premises, and focused on what he thought his application should look like. Only when he reflected on his life in broad terms did he realize that he had a compelling narrative to tell. Through various techniques developed along the way, Emmet was able to bring his personal narrative to life throughout his college application. Emmet started Acceptitas to empower motivated students like him to dream big and find their own narrative through this same approach. In additionAny student who believes they are a good fit for Acceptitas but do not have the financial means are encouraged to contact us for our pro-bono work.
+</p>
           <!-- Hover to different image -->
           <img src="https://placeholder.com/150" />
         </div>
