--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col">
-          <h1>Hi I'm Emmet...</h1>
+          <h1>Hi I'm Emmet!</h1>
           <p>… is what Emmet would say with a big smile if this was written in the first person. Emmet is an undergraduate at Harvard who has a passion for helping others succeed, experience teaching, and first-hand experience in the college admissions process. With an eye for engaging story-telling, Emmet studies History, writes about politics, and frequently performs standup comedy at Harvard. He loves meeting new people, learning what motivates them, and helping them maximize their strengths.
 </p>
           <!-- Hover to different image -->
