--- a/about.html
+++ b/about.html
@@ -72,8 +72,8 @@
       </div>
       <div class="row">
         <div class="col">
-          <h1>Emmet's Story</h1>
-          <p>Emmet struggled with learning differences in school and was cautioned that because writing and language learning would be too difficult, college might not be for him. Ironically, he developed a love for these subjects and has worked as a middle-school writing teacher, Editor-In-Chief of his highschool newspaper, and a current, a comedy writer. He also now speaks Spanish, French, and Russian, despite his early struggle with his native language. When it came time to apply to college, at first Emmet spent lots of time on cliche essays, fruitless premises, and focused on what he thought his application should look like. Only when he reflected on his life in broad terms did he realize that he had a compelling narrative to tell. Through various techniques developed along the way, Emmet was able to bring his personal narrative to life throughout his college application.</p>
+          <h1>Emmet's Narrative</h1>
+          <p>Emmet struggled with learning differences in school and was cautioned that since writing and language learning would be too difficult, college might not be for him. Ironically, he developed a love for these subjects and has since worked as a middle-school writing teacher, Editor-In-Chief of his highschool newspaper, and currently, a comedy writer. He also now speaks Spanish, French, and Russian, despite his early struggle with reading and writing. When it came time to apply to college, at first Emmet spent lots of time on cliche essays, fruitless premises, and focused on what he thought his application should look like. Only when he reflected on his life in broad terms did he realize that he had a compelling narrative to tell. Through various techniques developed along the way, Emmet was able to bring his personal narrative to life throughout his college application.</p>
           <!-- Hover to different image -->
           <img src="https://placeholder.com/150" />
         </div>
