--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
       <div class="row">
         <div class="col">
           <h1>Our Mission</h1>
-          <p>Emmet founded Acceptitas to empower motivated students like him to dream big and find their own narrative through this same approach. At Acceptitas, we believe that everyone, no matter their background deserves a fair shot to develop their full potential. Unlike other college admissions services, we offer a holistic approach that focuses on how all the pieces of the college application come together to form a larger, more compelling student narrative. Additionally, our work at Acceptitas is incredibly personal, and we place the highest priority on getting to know our clients as people. Simply put, we are in the business of empowering those who dream big. As such, any student who believes they are a good fit for Acceptitas but do not have the financial means are encouraged to contact us for our pro-bono work.
+          <p>Emmet founded Acceptitas to empower motivated students like him to dream big and find their own narrative through his proven approach. At Acceptitas, we believe that everyone, no matter their background deserves a fair shot to develop their full potential. Unlike other college admissions services, we offer a holistic approach that focuses on how all the pieces of the college application come together to form a larger, more compelling student narrative. Our work at Acceptitas is also incredibly personal, and one of our strengths is being able to connect student-to-student. Simply put, we are in the business of empowering those who dream big. As such, any student who believes they are a good fit for Acceptitas but does not have the financial means are encouraged to contact us for our pro-bono work.
 </p>
         </div>
       </div>
