--- a/about.html
+++ b/about.html
@@ -55,6 +55,14 @@
     </nav>
 
     <div class="container-fluid">
+      </div>
+      <div class="row">
+        <div class="col">
+          <h1>Our Mission</h1>
+          <p>Acceptitas was founded by Emmet Halm to empower motivated students like him to dream big and find their own narrative through his proven approach. At Acceptitas, we believe that everyone, no matter their background deserves a fair shot to develop their full potential. Unlike other college admissions services, we offer a holistic approach that focuses on how all the pieces of the college application come together to form a larger, more compelling student narrative. Our work at Acceptitas is also incredibly personal, and one of our strengths is being able to connect student-to-student. Simply put, we are in the business of empowering those who dream big. As such, any student who believes they are a good fit for Acceptitas but does not have the financial means are encouraged to contact us for our pro-bono work.
+</p>
+        </div>
+      </div>
       <div class="row">
         <div class="col">
           <h1>Hi I'm Emmet!</h1>
@@ -71,14 +79,6 @@
           <!-- Hover to different image -->
           <img src="https://placeholder.com/150" />
         </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <h1>Our Mission</h1>
-          <p>Emmet founded Acceptitas to empower motivated students like him to dream big and find their own narrative through his proven approach. At Acceptitas, we believe that everyone, no matter their background deserves a fair shot to develop their full potential. Unlike other college admissions services, we offer a holistic approach that focuses on how all the pieces of the college application come together to form a larger, more compelling student narrative. Our work at Acceptitas is also incredibly personal, and one of our strengths is being able to connect student-to-student. Simply put, we are in the business of empowering those who dream big. As such, any student who believes they are a good fit for Acceptitas but does not have the financial means are encouraged to contact us for our pro-bono work.
-</p>
-        </div>
-      </div>
     
       <!-- Call to Action -->
       <div class="row">
