--- a/about.html
+++ b/about.html
@@ -57,13 +57,13 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col">
-          <h1>Hi I'm Emmet!</h1>
-          <p>… is what Emmet would say with a big smile if this was written in the first person. Emmet is an undergraduate at Harvard who has a passion for helping others succeed, experience teaching, and first-hand experience in the college admissions process. With an eye for engaging story-telling, Emmet studies History, writes about politics, and frequently performs standup comedy at Harvard. He loves meeting new people, learning what motivates them, and helping them maximize their strengths.
+          <h1>Our Mission</h1>
+          <p>Acceptitas was founded by Emmet Halm to empower motivated students like him to dream big and find their own narrative through his proven approach. At Acceptitas, we believe that everyone, no matter their background deserves a fair shot to develop their full potential. Unlike other college admissions services, we offer a holistic approach that focuses on how all the pieces of the college application come together to form a larger, more compelling student narrative. Our work at Acceptitas is also incredibly personal, and one of our strengths is being able to connect student-to-student. Simply put, we are in the business of empowering those who dream big. As such, any student who believes they are a good fit for Acceptitas but does not have the financial means are encouraged to contact us for our pro-bono work.
 </p>
             <div class="row">
         <div class="col">
-          <h1>Emmet's Narrative</h1>
-          <p>Emmet struggled with learning differences in school and was cautioned that since writing and language learning would be too difficult, college might not be for him. Ironically, he developed a love for these subjects and has since worked as a middle-school writing teacher, Editor-In-Chief of his highschool newspaper, and currently, a comedy writer. He also now speaks Spanish, French, and Russian, despite his early struggle with reading and writing. When it came time to apply to college, at first Emmet spent lots of time on cliche essays, fruitless premises, and focused on what he thought his application should look like. Only when he reflected on his life in broad terms did he realize that he had a compelling narrative to tell. Through various techniques developed along the way, Emmet was able to bring his personal narrative to life throughout his college application.</p>
+          <h1>Hi, I'm Emmet!</h1>
+          <p>… is what Emmet would say with a big smile if this was written in the first person. Emmet is an undergraduate at Harvard who has a passion for helping others succeed, experience teaching, and first-hand experience in the college admissions process. With an eye for engaging story-telling, Emmet studies History, writes about politics, and frequently performs standup comedy at Harvard. He loves meeting new people, learning what motivates them, and helping them maximize their strengths.</p>
           <!-- Hover to different image -->
           <img src="https://placeholder.com/150" />
         </div>
@@ -74,8 +74,8 @@
     </div>
       <div class="row">
         <div class="col">
-          <h1>Our Mission</h1>
-          <p>Acceptitas was founded by Emmet Halm to empower motivated students like him to dream big and find their own narrative through his proven approach. At Acceptitas, we believe that everyone, no matter their background deserves a fair shot to develop their full potential. Unlike other college admissions services, we offer a holistic approach that focuses on how all the pieces of the college application come together to form a larger, more compelling student narrative. Our work at Acceptitas is also incredibly personal, and one of our strengths is being able to connect student-to-student. Simply put, we are in the business of empowering those who dream big. As such, any student who believes they are a good fit for Acceptitas but does not have the financial means are encouraged to contact us for our pro-bono work.
+          <h1>Emmet's Narrative</h1>
+          <p>Emmet struggled with learning differences in school and was cautioned that since writing and language learning would be too difficult, college might not be for him. Ironically, he developed a love for these subjects and has since worked as a middle-school writing teacher, Editor-In-Chief of his highschool newspaper, and currently, a comedy writer. He also now speaks Spanish, French, and Russian, despite his early struggle with reading and writing. When it came time to apply to college, at first Emmet spent lots of time on cliche essays, fruitless premises, and focused on what he thought his application should look like. Only when he reflected on his life in broad terms did he realize that he had a compelling narrative to tell. Through various techniques developed along the way, Emmet was able to bring his personal narrative to life throughout his college application.
 </p>
         </div>
       </div>
