--- a/services.html
+++ b/services.html
@@ -57,36 +57,78 @@
     <div class="container-fluid">
       <!-- Thick line for each -->
       <div class="row">
-        <div class="col">
+        <div class="col-md-8 offset-md-2">
           <h1>Our Services</h1>
-          <p>Acceptitas offers a wide range of services to help students craft their most compelling narrative through all parts of the college application, with a special focus on the essays.</p>
+          <p>
+            Acceptitas offers a wide range of services to help students craft
+            their most compelling narrative through all parts of the college
+            application, with a special focus on the essays.
+          </p>
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col-md-8 offset-md-2">
           <h1>“Find Your Narrative” Strategy Consultations</h1>
-          <p>The difference between those of a similar caliber who get in versus being passed over depends on your personal narrative--the unique story of you that makes the admissions officer want to take a chance on you. We use our first-hand experience to help you identify and craft your most compelling narrative through our strategy consultations. We will get to know you, examine your life experiences, interests, and aspirations to craft your unique application narrative. After our meeting, you will receive an assessment of your current narrative, its strengths, areas for growth, and an action plan for refining your story across your application materials.
-</p>
+          <p>
+            The difference between those of a similar caliber who get in versus
+            being passed over depends on your personal narrative--the unique
+            story of you that makes the admissions officer want to take a chance
+            on you. We use our first-hand experience to help you identify and
+            craft your most compelling narrative through our strategy
+            consultations. We will get to know you, examine your life
+            experiences, interests, and aspirations to craft your unique
+            application narrative. After our meeting, you will receive an
+            assessment of your current narrative, its strengths, areas for
+            growth, and an action plan for refining your story across your
+            application materials.
+          </p>
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col-md-8 offset-md-2">
           <h1>Application Narrative Assessment</h1>
-          <p>No matter where you are in the application process, Acceptitas is here to empower you to maximize your potential. Unlike many admissions counselors and services, we recognize that your essays are not read in an isolated bubble, but rather part of your larger application packet narrative. As such, we review your current application packet materials, provide constructive feedback, and help you identify and amplify your strongest narratives. Part of this process is a “mock admissions read” which we use as a diagnostic test of your narrative’s strength. With Acceptitas, you will have a personal coach, you will give you timely, candid, and actionable feedback at any stage in the process. We provide everything from routine assessment and feedback to one-time narrative-strengthening meetings and reports.
-</p>
+          <p>
+            No matter where you are in the application process, Acceptitas is
+            here to empower you to maximize your potential. Unlike many
+            admissions counselors and services, we recognize that your essays
+            are not read in an isolated bubble, but rather part of your larger
+            application packet narrative. As such, we review your current
+            application packet materials, provide constructive feedback, and
+            help you identify and amplify your strongest narratives. Part of
+            this process is a “mock admissions read” which we use as a
+            diagnostic test of your narrative’s strength. With Acceptitas, you
+            will have a personal coach, you will give you timely, candid, and
+            actionable feedback at any stage in the process. We provide
+            everything from routine assessment and feedback to one-time
+            narrative-strengthening meetings and reports.
+          </p>
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col-md-8 offset-md-2">
           <h1>Mock Interviews</h1>
-          <p>The interview is another critical part of a student’s overall application, which has the potential to bring a narrative to life or drag it down. Learn how to lean into your strengths and naturally support your overall application narrative through our mock interviews, conducted by someone who has successful first-hand experience. Each mock interview comes with an after-action report that identifies actionable areas of growth for the big day.</p>
+          <p>
+            The interview is another critical part of a student’s overall
+            application, which has the potential to bring a narrative to life or
+            drag it down. Learn how to lean into your strengths and naturally
+            support your overall application narrative through our mock
+            interviews, conducted by someone who has successful first-hand
+            experience. Each mock interview comes with an after-action report
+            that identifies actionable areas of growth for the big day.
+          </p>
         </div>
       </div>
 
       <div class="row">
-        <div class="col">
+        <div class="col-md-8 offset-md-2">
           <h1>Last Minute Essay and Narrative Editing</h1>
-          <p>You are almost ready to submit your college applications. After this point, everything is out of your hands. We provide last-minute essay and overall narrative feedback for driven students wanting to present the most compelling version of themself, and click the submit button with confidence.</p>
+          <p>
+            You are almost ready to submit your college applications. After this
+            point, everything is out of your hands. We provide last-minute essay
+            and overall narrative feedback for driven students wanting to
+            present the most compelling version of themself, and click the
+            submit button with confidence.
+          </p>
         </div>
       </div>
 
